--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ djangorestframework_simplejwt==5.5.0
 idna==3.10
 joblib==1.4.2
 Levenshtein==0.27.1
-mysqlclient==2.2.7
+mysql-connector-python==9.3.0
 nltk==3.9.1
 PyJWT==2.9.0
 python-dotenv==1.1.0
